Bug 633171 - VMPI_captureStackTrace does not compile for either 32-bit or 64-bit x86 Linux